--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,26 @@ body
     overflow: hidden;
 }
 
+a:link {
+    color: #20f404;
+    background-color: transparent;
+  }
+  
+  a:visited {
+    color: #20f404;;
+    background-color: transparent;
+  }
+  
+  a:hover {
+    color: #20f404;;
+    background-color: transparent;
+  }
+  
+  a:active {
+    color: #20f404;;
+    background-color: transparent;
+  }
+
 .webgl
 {
     position: fixed;
